Css fixes to wrap the primary slider to the width of the edits present & to increase the width of the page title box in the overlay

--- a/css/visualise.css
+++ b/css/visualise.css
@@ -220,6 +220,7 @@ text{
 	border-color: #ddd;
 	padding: 3px;
 	margin: 1px 2px 0px 2px;
+	display: inline-block;
 }
 
 #enlargedContainer {
@@ -310,8 +311,8 @@ text{
 	position: absolute;
 }
 #overlayHeader{
-	width: 350px;
-	background:#f5f5f5;
+	width: 380px;
+	background: #f5f5f5;
 	margin:auto;
 	padding: 5px 10px 10px;
 	position: absolute;
